objetos/6-volumes.yaml
kind:           Pod
apiVersion:     v1

metadata:
    name:       minginx

spec:
  #nodeName: <nombre-del-nodo>
  #nodeSelector:
  #  gpu: potente


  volumes:
    - name:                         volumen-para-compartir-informacion
      emptyDir:                     {}
                                    # medium: "Memory"
      # Este tipo de volumen se crea a nivel LOCAL (HOST)
      # Por defecto, tiene persistencia en disco, aunque se puede cambiar a RAM (medium: "Memory")
      # Ese volumen por defecto se crea sin datos... y es eliminado si se elimina el pod (NO HAY PERSISTENCIA)
    - name:                         volumen-configuracion-nginx
      configMap:
        name:                       configuracion-nginx
      # En este caso, lo que kubernetes hará será dentro de la carpeta donde se monte el volumen a nivel del contenedor
      # crear tantos archivos como claves se hayan definido en el ConfigMap... 
      # El nombre de cada archivo será el mismo que la clave del ConfigMap
      # El contenido de cada archivo será el valor de la clave correspondiente en el ConfigMap.
      # En nuestro caso, al montar este volumen, dentro de /etc/nginx/conf.d
      # Kubernetes creará 2 archivos dentro de esa carpeta: nombre-bbdd y usuario
      # El contenido de esos archivos será respectivamente "miapp" y "usuario"
      # Igual que los configMap, tenemos los Secret
      # El uso es el mismo... pero los secrets (como volúmenes) se reservan para:
      # - Inyectar certificados SSL
      # - Inyectar claves privadas
      # - Ficheros de licencia
      # Al hacerlo kubernetes garantiza:
      # - Dentro de la bbdd de kubernetes (etcd) se guardan encriptados
      # - El fichero no se persiste a disco en ningún momento... Esta en RAM
    - name:                          inyectado-desde-host
      hostPath:
        path: /proc
        type: Directory
      # Esto lo usamos habitualmente cuando queremos que el contenedor tenga acceso a datos del host
      # Para monitorización
      # O lo que quiero es montar un DockerInDocker... es decir, que desde un contenedor pueda crear nuevos contenedores en el host
      # Para ello, tengo que inyectar en el contenedor 2 cosas:
      # - El cliente de Docker: /opt/docker
      # - El socket de Docker: /var/run/docker.sock
      # Mucho cuidado. NO SIRVEN PARA PERSISTENCIA !
      # Los datos que el contenedor guarde en esa carpeta (caso que sea una carpeta / archivo), SI SE GUARDAN PERSISTENTEMENTE en el host
      # Incluso tras la eliminación del contenedor... pero... No tengo garantía que si Kubernetes 
      # Mueve el pod de un nodo a otro... en ese otro nodo estén los datos.
    - name:                         volumen-persistente-bbdd
      persistentVolumeClaim:
        claimName:                  peticion-volumen-bbdd
      # ESTO DE AQUI ABAJO FUNCIONARIA... PERO NO SE HACE NUNCA JAMAS!
      #nfs:
      #  server:                     192.168.0.215   # IP del servidor nfs
      #  path:                       /exportada      # Carpeta que exporta el servidor nfs
      
      #iscsi:
        # La dirección IP o DNS del servidor iSCSI y el puerto
        #targetPortal: 10.0.2.15:3260
        # El IQN (iSCSI Qualified Name) del target
        #iqn: iqn.2017-01.com.example:kube-target
        # El LUN (Logical Unit Number) a utilizar
        #lun: 0
        # El tipo de sistema de archivos que ya existe en el LUN
        #fsType: 'ext4'
        # Solo lectura (false permite lectura/escritura)
        #readOnly: false
      
      #awsElasticBlockStore:
        #volumeID: "<volume id>"
        #fsType: ext4

  containers:

        -   name:                   contenedor-1
            image:                  nginx:latest
            imagePullPolicy:        Always
            volumeMounts:
              - name:               volumen-para-compartir-informacion
                mountPath:          /compartida
              - name:               volumen-configuracion-nginx
                mountPath:          /etc/nginx/conf.d

        -   name:                   contenedor-2
            image:                  mariadb:latest
            imagePullPolicy:        Always
            volumeMounts:
              - name:               volumen-para-compartir-informacion
                mountPath:          /otra-ruta
              - name:               inyectado-desde-host
                mountPath:          /procesos
              - name:               volumen-persistente-bbdd
                mountPath:          /var/lib/mysql
